# ArchV

./: README.md  index.html  main.ts
ArchV/: memory.js  memory.js.map  memory.ts  opcodes.js  opcodes.js.map  opcodes.ts  processor.js  processor.js.map  processor.ts  utils.js  utils.js.map  utils.ts
compiler/: archv-compiler.cabal  test.asm
compiler/src/: Lib.hs  StringUtils.hs
simulator/: main.ts  package.json  tsconfig.json  tsd.json
simulator/ArchV/: memory.ts  opcodes.ts  processor.ts
simulator/test/: addr_test.ts  cmp_test.ts  count_test.ts  jmp_test.ts  mov_test.ts
